--- a/xpets/res/layout/item_detail.xml
+++ b/xpets/res/layout/item_detail.xml
@@ -14,6 +14,7 @@
 
     <ProgressBar
         android:id="@+id/loading"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
