--- a/xpets/res/layout/item_detail.xml
+++ b/xpets/res/layout/item_detail.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/app_name" />
+        android:contentDescription="@string/app_name"
+        android:onClick="toggleActionBar" />
 
     <ProgressBar
         android:id="@+id/loading"
