--- a/xpets/res/menu/details_menu.xml
+++ b/xpets/res/menu/details_menu.xml
@@ -15,12 +15,11 @@
 -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
     <item
         android:id="@+id/menu_share"
         android:icon="@android:drawable/ic_menu_share"
         android:orderInCategory="1"
-        android:showAsAction="never"
+        android:showAsAction="ifRoom"
         android:title="@string/menu_share"/>
 
 </menu>
